--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -10,7 +10,7 @@
 \textit{The valley calls to those who seek adventure and riches beyond imagination. Its heart is guarded by Dragons older than time, its edges lined with settlements of those who dare to claim a foothold in this perilous land. But there is no safety here—only the promise of power for those who fight, and the certainty of death for those who falter.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario is played over 13 Rounds (or a shorter version over 8 rounds).
+This Scenario is played over 13 Rounds (or a shorter version over 8 Rounds).
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2-4
@@ -21,8 +21,8 @@ This Scenario is played over 13 Rounds (or a shorter version over 8 rounds).
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svgunit{bronze} units of the player's choice.
-  \item A Pack of \svgunit{bronze} units of the player's choice.
+  \item A Few \svgunit{bronze} Units of the player's choice.
+  \item A Pack of \svgunit{bronze} Units of the player's choice.
 \end{itemize}
 
 \textbf{Town Buildings:} 
@@ -36,33 +36,33 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \textbf{For each player, take:}
 \begin{itemize}
-  \item \textbf{1} × Starting (I) Map tile,
-  \item \textbf{3} × Far (II-III) Map tiles - one of which includes a settlement and one trading post + one random,
-  \item \textbf{2} × Near (IV-V) Map tile,
-  \item \textbf{1} × Center (VI-VI) Map tiles containing Settlements and Grails (Only for 4 players).
+  \item \textbf{1} × Starting (I) Map Tile,
+  \item \textbf{3} × Far (II-III) Map Tiles - one of which includes a settlement and one trading post + one random,
+  \item \textbf{2} × Near (IV-V) Map Tile,
+  \item \textbf{1} × Center (VI-VI) Map Tiles containing Settlements and Grails (Only for 4 players).
 \end{itemize}
 \textbf{AND}
 
 \begin{itemize}
-  \item \textbf{1} × Starting (I) Map tile - with \textit{Dragon Utopia} for 2-3 players \textbf{OR}
-  \item \textbf{2} × Starting (I) Map tile - with \textit{Dragon Utopia} for 4 players.
+  \item \textbf{1} × Starting (I) Map Tile - with \textit{Dragon Utopia} for 2-3 players \textbf{OR}
+  \item \textbf{2} × Starting (I) Map Tile - with \textit{Dragon Utopia} for 4 players.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-\textit{The game ends at the end of the round where the first victory condition is met:}
+\textit{The game ends at the end of the Round where the first victory condition is met:}
 \begin{itemize}
-  \item One player has defeated all other players’ main heroes once - \textit{That player wins the game.}
+  \item One player has defeated all other players’ main Heroes once - \textit{That player wins the game.}
   \item One player conquers both of the Dragon Utopias - \textit{That player wins the game.}
-  \item One player controls 5 mines or settlements on Near and Center tiles - \textit{That player gets 4VP.}
+  \item One player controls 5 mines or settlements on Near and Center Tiles - \textit{That player gets 4VP.}
   \item At the end of Round 13, \textit{or at the end of Round 8 for the short game.}
 \end{itemize}
 
 \subsection*{\MakeUppercase{The player with the most Victory Points wins the game:}}
 \begin{itemize}
   \item 5 VP for conquering a Dragon Utopia
-  \item 4 VP for defeating the Enemy’s Main Hero - \textit{once per defeated faction.}
-  \item 2 VP for defeating the Enemy’s Secondary Hero - \textit{once per defeated faction.}
-  \item 2 VP for each enemy Main Town captured - \textit{once per captured faction.}
+  \item 4 VP for defeating the Enemy’s Main Hero - \textit{once per defeated Faction.}
+  \item 2 VP for defeating the Enemy’s Secondary Hero - \textit{once per defeated Faction.}
+  \item 2 VP for each enemy Main Town captured - \textit{once per captured Faction.}
   \item 1 VP for every controlled Mine or Settlement.
   \item 1 VP for every Level of Experience of the Main Hero.
 \end{itemize}
@@ -71,39 +71,39 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \begin{itemize}
   \item Start of \textbf{\nth{1} and \nth{9} Rounds:} All Heroes gain +1 Movement.
-  \item Start of \textbf{\nth{4} and \nth{8} Rounds:} Remove black cubes from all locations that give resources, morale or cards.
+  \item Start of \textbf{\nth{4} and \nth{8} Rounds:} Remove black Cubes from all locations that give resources, morale or Cards.
   \item End of \textbf{\nth{10} Round:} Player(s) with lowest XP roll 2 Resource dice.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Remove “Earthquake”,  “Remove Obstacles”, “View Earth” and “Visions" from the spell deck.
-  \item Remove “Unexpected Reinforcements” from the Astrologers Proclaim deck.
-  \item Make one deck of minor, one of major and one of relic artifacts.
-  \item Make one deck of basic spells and one of expert spells.
-  \item On Starting and Far tiles players can only get basic spells and minor artifacts.
+  \item Remove “Earthquake”,  “Remove Obstacles”, “View Earth” and “Visions" from the spell Deck.
+  \item Remove “Unexpected Reinforcements” from the Astrologers Proclaim Deck.
+  \item Make one Deck of minor, one of major and one of relic artifacts.
+  \item Make one Deck of basic spells and one of expert spells.
+  \item On Starting and Far Tiles players can only get basic spells and minor artifacts.
   \item Players may not use Diplomacy to skip lvl VII Combat.
-  \item If your hero is lvl VII, treat lvl VI neutrals as lvl VII and gain 10 \svg{gold}
-  \item Sanctuary effect: +1 Morale and draw 1 card. Visitable once per faction.
-  \item Obelisk effect: Roll one Resource die and draw one card. \textit{May be visited once per faction.}
-  \item When fighting a neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell deck
+  \item If your Hero is lvl VII, treat lvl VI neutrals as lvl VII and gain 10 \svg{gold}
+  \item Sanctuary effect: +1 Morale and draw 1 Card. Visitable once per Faction.
+  \item Obelisk effect: Roll one Resource die and draw one Card. \textit{May be visited once per Faction.}
+  \item When fighting a neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck
   \item Level VII settlements are treated as two settlements for rewards AND roll one Resource or Treasure (reroll any XP) die.
-  \item If a player defeats neutral units on a Grail hex, he immediately gets: 10 \svg{gold}, 4 \svg{building_materials} and 2 \svg{valuables}. (alternative: Throw 2 treasure (reroll any XP ) and 2 Resource dice)  \textit{Can be conquered only once.}
-  \item Dragon Utopia: Reshuffle the \svgunit{gold} and\svgunit{azure} decks, then draw \svgunit{azure} until you get 3 Dragons and choose 2 AND draw from \svgunit{gold} until you get one Dragon. 
-  \item When a player conquers Dragon Utopia, he may recruit one of the neutral Dragons killed for half the \svg{gold} (rounded down) + \svg{valuables} OR gain 15 \svgunit{gold} AND Search (3) any artifact deck. \textit{Can be conquered only once.}
+  \item If a player defeats neutral Units on a Grail hex, he immediately gets: 10 \svg{gold}, 4 \svg{building_materials} and 2 \svg{valuables}. (alternative: Throw 2 treasure (reroll any XP ) and 2 Resource dice)  \textit{Can be conquered only once.}
+  \item Dragon Utopia: Reshuffle the \svgunit{gold} and\svgunit{azure} Decks, then draw \svgunit{azure} until you get 3 Dragons and choose 2 AND draw from \svgunit{gold} until you get one Dragon. 
+  \item When a player conquers Dragon Utopia, he may recruit one of the neutral Dragons killed for half the \svg{gold} (rounded down) + \svg{valuables} OR gain 15 \svgunit{gold} AND Search (3) any artifact Deck. \textit{Can be conquered only once.}
 \end{itemize}
 
 When a Dragon Utopia is conquered, roll an attack die:
 \begin{itemize}
-  \item -1: The defeated Dragons’ spirits curse the land! All players lose 1 MP for the next round.
-  \item  0: Dragons revenge: All players must sacrifice one unit before the end of round, that unit's health is reduced to 0. 
-  \item +1: Scattered Treasure: All players may immediately lose 1 MP to Search (2) the artifact deck.
+  \item -1: The defeated Dragons’ spirits curse the land! All players lose 1 MP for the next Round.
+  \item  0: Dragons revenge: All players must sacrifice one Unit before the end of Round, that Unit's health is reduced to 0. 
+  \item +1: Scattered Treasure: All players may immediately lose 1 MP to Search (2) the artifact Deck.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Suggested houserules}}
 \begin{itemize}
-  \item Trading Posts - Trade resources and remove cards, OR buy war machines.
-  \item Unlimited combat rounds against neutrals + harder level. +gain combat lvl × \svg{gold}.
+  \item Trading Posts - Trade resources and remove Cards, OR buy war machines.
+  \item Unlimited combat Rounds against neutrals + harder Level. +gain combat lvl × \svg{gold}.
   \item \href{https://boardgamegeek.com/thread/3445901/custom-hex-combat-board}{Medium Hex combat board}.
   \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Medium Hex combat board} - Start with several Few \svgunit{bronze} units.
 \end{itemize}
