--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -89,7 +89,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item When fighting a neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck
   \item Level VII settlements are treated as two settlements for rewards AND roll one Resource or Treasure (reroll any XP) die.
   \item If a player defeats neutral Units on a Grail hex, he immediately gets: 10 \svg{gold}, 4 \svg{building_materials} and 2 \svg{valuables}. (alternative: Throw 2 treasure (reroll any XP ) and 2 Resource dice)  \textit{Can be conquered only once.}
-  \item Dragon Utopia: Reshuffle the \svgunit{gold} and\svgunit{azure} Decks, then draw \svgunit{azure} until you get 3 Dragons and choose 2 AND draw from \svgunit{gold} until you get one Dragon. 
+  \item Dragon Utopia: Reshuffle the \svgunit{gold} and \svgunit{azure} Decks, then draw \svgunit{azure} until you get 3 Dragons and choose 2 AND draw from \svgunit{gold} until you get one Dragon. 
   \item When a player conquers Dragon Utopia, he may recruit one of the neutral Dragons killed for half the \svg{gold} (rounded down) + \svg{valuables} OR gain 15 \svgunit{gold} AND Search (3) any artifact Deck. \textit{Can be conquered only once.}
 \end{itemize}
 
@@ -112,10 +112,25 @@ When a Dragon Utopia is conquered, roll an attack die:
 
 \end{multicols*}
 
-\begin{tikzpicture}[overlay]
+\begin{minipage}{0.4\paperwidth}
   \centering
-  \node at (4.5, -5) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p.png}};
-  \node at (4.5, -10) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
-  \node at (12.1, -14) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p-short.png}};
-  \node at (12.1, -21.6) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SHORT SCENARIO}}}};
-\end{tikzpicture}
+  \includegraphics[width=0.36\paperwidth]{\maps/dragon-valley-2p.png}
+  \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
+\end{minipage}
+\begin{minipage}{0.4\paperwidth}
+  \centering
+  \includegraphics[width=0.36\paperwidth]{\maps/dragon-valley-3p.png}
+  \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
+\end{minipage}
+\vspace{1em}
+\linebreak
+\begin{minipage}{0.4\paperwidth}
+  \centering
+  \includegraphics[width=0.36\paperwidth]{\maps/dragon-valley-4p.png}
+  \captionof{figure}{\textbf{4-PLAYER SCENARIO}}
+\end{minipage}
+\begin{minipage}{0.4\paperwidth}
+  \centering
+  \includegraphics[width=0.36\paperwidth]{\maps/dragon-valley-4p-short.png}
+  \captionof{figure}{\textbf{5-PLAYER SCENARIO}}
+\end{minipage}
