--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -27,7 +27,7 @@ This Scenario is played over 13 Rounds (or a shorter version over 8 Rounds).
 
 \textbf{Town Buildings:} 
 \begin{itemize}
-  \item \svgunit{bronze} Dwelling
+  \item \svg{bronze} Dwelling
   \item Each player may build the \textit{Mage Guild} or a \textit{Faction-specific} building with a discount of 10 \svg{gold} (trading post conversion chart may be used for the discount).
 \end{itemize}
 
@@ -89,8 +89,8 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item When fighting a neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck
   \item Level VII settlements are treated as two settlements for rewards AND roll one Resource or Treasure (reroll any XP) die.
   \item If a player defeats neutral Units on a Grail hex, he immediately gets: 10 \svg{gold}, 4 \svg{building_materials} and 2 \svg{valuables}. (alternative: Throw 2 treasure (reroll any XP ) and 2 Resource dice)  \textit{Can be conquered only once.}
-  \item Dragon Utopia: Reshuffle the \svgunit{gold} and \svgunit{azure} Decks, then draw \svgunit{azure} until you get 3 Dragons and choose 2 AND draw from \svgunit{gold} until you get one Dragon. 
-  \item When a player conquers Dragon Utopia, he may recruit one of the neutral Dragons killed for half the \svg{gold} (rounded down) + \svg{valuables} OR gain 15 \svgunit{gold} AND Search (3) any artifact Deck. \textit{Can be conquered only once.}
+  \item Dragon Utopia: Reshuffle the \svg{gold} and \svg{azure} Decks, then draw \svg{azure} until you get 3 Dragons and choose 2 AND draw from \svg{gold} until you get one Dragon. 
+  \item When a player conquers Dragon Utopia, he may recruit one of the neutral Dragons killed for half the \svg{gold} (rounded down) + \svg{valuables} OR gain 15 \svg{gold} AND Search (3) any artifact Deck. \textit{Can be conquered only once.}
 \end{itemize}
 
 When a Dragon Utopia is conquered, roll an attack die:
@@ -105,7 +105,7 @@ When a Dragon Utopia is conquered, roll an attack die:
   \item Trading Posts - Trade resources and remove Cards, OR buy war machines.
   \item Unlimited combat Rounds against neutrals + harder Level. +gain combat lvl × \svg{gold}.
   \item \href{https://boardgamegeek.com/thread/3445901/custom-hex-combat-board}{Medium Hex combat board}.
-  \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Medium Hex combat board} - Start with several Few \svgunit{bronze} units.
+  \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Medium Hex combat board} - Start with several Few \svg{bronze} Units.
 \end{itemize}
 
 \vspace*{\fill}
