--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -132,5 +132,5 @@ When a Dragon Utopia is conquered, roll an attack die:
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.36\paperwidth]{\maps/dragon-valley-4p-short.png}
-  \captionof{figure}{\textbf{5-PLAYER SCENARIO}}
+  \captionof{figure}{\textbf{4-PLAYER SHORT SCENARIO}}
 \end{minipage}
