--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -40,14 +40,14 @@
         \item P × Starting (I) Map Tile
         \item N1 Near (IV--V) Tile, plus \begin{itemize}
             \item \textbf{Solo game}: 1 × additional Near (IV--V) Tile with obelisk
-            \item \textbf{PvP game}: 2 $P$ × additional Near (IV--V) Tile, exactly $P$ containing obelisk; tiles with obelisks cannot be adjacent to N1 tile.
+            \item \textbf{PvP game}: 2 $P$ × additional Near (IV--V) Tile, exactly $P$ containing obelisk; Tiles with obelisks cannot be adjacent to N1 tile.
         \end{itemize}
         \item C2 and \#C1\footnote{If you do not have Tower expansion, you may use C1 instead, with two changes: \textit{Dragon Utopia} is actually a settlement, and \textit{Warrior Tomb} is protected by Neutral Units instead of the Shrine. All special rules related to \#C1 should be then applied to C1} Center (VI--VII) Map Tiles
     \end{itemize}
 
     \subsection*{\MakeUppercase{Preparation}}
 
-    Before game, remove \textit{Estates} ability, along with all spells and artifacts giving resources (even as one of the options) from their decks\footnote{Lord Haart's starting ability is replaced with \textbf{Scouting}.} and organize them in 5 separate piles:
+    Before game, remove \textit{Estates} ability, along with all spells and artifacts giving resources (even as one of the options) from their Decks\footnote{Lord Haart's starting ability is replaced with \textbf{Scouting}.} and organize them in 5 separate piles:
 
     \begin{itemize}
         \item \textit{Estates}
@@ -57,7 +57,7 @@
         \item Remaining artifacts.
     \end{itemize}
 
-    These cards will be available at specific locations.
+    These Cards will be available at specific locations.
 
     \subsection*{\MakeUppercase{Additional Rules}}
 
@@ -80,13 +80,13 @@
             \end{tabularx}
             \medskip
         }
-        * Including quick figts. Bypassing without visiting field (like with \textit{Pathfinding} ability) is still allowed.
+        * Including quick figts. Bypassing without visiting the Field (like with \textit{Pathfinding} ability) is still allowed.
     \end{table*}
 
     \begin{itemize}
         \item At the start of certain rounds, players will need to send a \textbf{tranche} to their lieges. The tranche value is expressed in \svg{gold}, but may be partially or entirely paid in other resources, with ratios being 1 \svg{building_materials} to 2 \svg{gold} and 1 \svg{valuables} to 4 \svg{gold}, without change. In alliance mode, allied players solidarily pays single tranche. Player or team unable to pay loses the game immediately.
-        \item The difficulty of all fields on \#C1 tile is lowered by one (so it is effectively a "V-VI" tile)
-        \item Certain locations have special rules, which usually allows getting cards giving resources - refer to the table below.
+        \item The difficulty of all Fields on \#C1 Tile is lowered by one (so it is effectively a "V-VI" tile)
+        \item Certain locations have special rules, which usually allows getting Cards giving resources - refer to the table below.
         \item Main Hero with Grail token is not protected by \textit{Sanctuary} effect.
         \item Surrendering cost for Main Hero with Grail token is increased to 30\svg{gold}
         \item Player defeating an enemy Main Hero may, instead of taking 5 \svg{gold}, take over Grail token or one artifact from the opponent's discard pile.
@@ -95,10 +95,10 @@
     \subsection*{\MakeUppercase{Victory and Defeat Conditions}}
 
     \begin{itemize}
-        \item At end of any round, player/team who has the Grail Token and is able to afford all remaining \textbf{tranches} wins immediately.
+        \item At end of any Round, player/team who has the Grail Token and is able to afford all remaining \textbf{tranches} wins immediately.
         \item Player/team unable to pay required \textbf{tranche} loses the game immediately.
-        \item \textbf{Solo game} if player fails to meet victory condition after round 13, they lose.
-        \item \textbf{PvP game} if no player wins after round 13, or both players/teams cannot pay the \textbf{tranche} the same round, the winner is a player/team who is able to pay highest \textbf{tranche} with Grail token being worth additional 60 \svg{gold}
+        \item \textbf{Solo game} if player fails to meet victory condition after Round 13, they lose.
+        \item \textbf{PvP game} if no player wins after Round 13, or both players/teams cannot pay the \textbf{tranche} the same Round, the winner is a player/team who is able to pay highest \textbf{tranche} with Grail token being worth additional 60 \svg{gold}
     \end{itemize}
 
     \vfill
@@ -113,24 +113,24 @@
             \bigskip
             \begin{tabularx}{\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Solo variant} & \darkcell{1v1 variant} & \darkcell{2v2} \\
                 \darkcell{\nth{1} tranche}
-                & \lightcell{\nth{4} round: 20 \svg{gold}}
-                & \lightcell{\nth{4} round: 20 \svg{gold}}
-                & \lightcell{\nth{4} round: 40 \svg{gold}} \\
+                & \lightcell{\nth{4} Round: 20 \svg{gold}}
+                & \lightcell{\nth{4} Round: 20 \svg{gold}}
+                & \lightcell{\nth{4} Round: 40 \svg{gold}} \\
                 \darkcell{\nth{2} tranche}
-                & \lightcell{\nth{8} round: 50 \svg{gold}}
-                & \lightcell{\nth{10} round: 60 \svg{gold}}
-                & \lightcell{\nth{10} round: 120 \svg{gold}} \\
+                & \lightcell{\nth{8} Round: 50 \svg{gold}}
+                & \lightcell{\nth{10} Round: 60 \svg{gold}}
+                & \lightcell{\nth{10} Round: 120 \svg{gold}} \\
                 \darkcell{\nth{3} tranche}
-                & \lightcell{\nth{12} round: 80 \svg{gold}}
-                & \lightcell{\nth{13} round: 60 \svg{gold}}
-                & \lightcell{\nth{13} round: 120 \svg{gold}} \\
+                & \lightcell{\nth{12} Round: 80 \svg{gold}}
+                & \lightcell{\nth{13} Round: 60 \svg{gold}}
+                & \lightcell{\nth{13} Round: 120 \svg{gold}} \\
             \end{tabularx}
         }
     \end{table*}
 
-    Refer to the table below to see what tranches are to be paid on what turns. Tranches on Resource Rounds are paid \textbf{after} receiving resources and resolving round-begin effects.
+    Refer to the table below to see what tranches are to be paid on what turns. Tranches on Resource Rounds are paid \textbf{after} receiving resources and resolving Round-begin effects.
 
-    After paying a tranche, \textbf{remove black cubes} from all \textit{Windmills} and \textit{Waterwheels} on the map.
+    After paying a tranche, \textbf{remove black Cubes} from all \textit{Windmills} and \textit{Waterwheels} on the map.
 
     \begin{tikzpicture}[overlay]
         \centering
