--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -114,8 +114,16 @@ When a Dragon Utopia is conquered, roll an attack die:
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (4.5, -5) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p.png}};
-  \node at (4.5, -10) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
-  \node at (12.1, -14) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p-short.png}};
-  \node at (12.1, -21.6) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SHORT SCENARIO}}}};
+  % 2-player
+  \node at (4.5, -5) {\includegraphics[scale=0.165]{\maps/dragon-valley-2p.png}};
+  \node at (4.5, -10) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
+  % 3-player
+  \node at (12.1, -5) {\includegraphics[scale=0.165]{\maps/dragon-valley-3p.png}};
+  \node at (12.1, -10) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SHORT SCENARIO}}}};
+  % 4-player
+  \node at (4.5, -15) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p.png}};
+  \node at (4.5, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
+  % 4-player short
+  \node at (12.1, -15) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p-short.png}};
+  \node at (12.1, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SHORT SCENARIO}}}};
 \end{tikzpicture}
