--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -15,14 +15,14 @@ This Scenario is played over 13 Rounds (or a shorter version over 8 Rounds).
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2-4
 
-\textbf{Starting Resources:} 15 \svg{gold}, 4 \svg{building_materials}, 2 \svg{valuables}.
+\textbf{Starting Resources:} 15 \svg{gold}, 4 \svg{building_materials}, 2 \svg{valuables}
 
-\textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}.
+\textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few \svgunit{bronze} Units of the player's choice.
-  \item A Pack of \svgunit{bronze} Units of the player's choice.
+  \item A Few \svgunit{bronze} Units of the player's choice
+  \item A Pack of \svgunit{bronze} Units of the player's choice
 \end{itemize}
 
 \textbf{Town Buildings:} 
