--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -27,8 +27,8 @@ This Scenario is played over 13 Rounds (or a shorter version over 8 Rounds).
 
 \textbf{Town Buildings:} 
 \begin{itemize}
-  \item \svg{bronze} Dwelling
-  \item Each player may build the \textit{Mage Guild} or a \textit{Faction-specific} building with a discount of 10 \svg{gold} (trading post conversion chart may be used for the discount).
+  \item \svgunit{bronze} Dwelling
+  \item Each player may build the \textit{Mage Guild} or a \textit{Faction-specific} building with a discount of 10 \svg{gold} (trading post conversion chart may be used for the discount)
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
