--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -13,7 +13,7 @@
 This Scenario is played over 13 Rounds (or a shorter version over 8 Rounds).
 
 \subsection*{\MakeUppercase{Player Setup}}
-\textbf{Player Count:} 2-4
+\textbf{Player Count:} 2 -- 4
 
 \textbf{Starting Resources:} 15 \svg{gold}, 4 \svg{building_materials}, 2 \svg{valuables}
 
