--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -32,20 +32,23 @@ This Scenario is played over 13 Rounds (or a shorter version over 8 Rounds).
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
-Take the following Map Tiles and arrange them as shown in the Scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
 
-\textbf{For each player, take:}
 \begin{itemize}
-  \item \textbf{1} × Starting (I) Map Tile,
-  \item \textbf{3} × Far (II-III) Map Tiles - one of which includes a settlement and one trading post + one random,
-  \item \textbf{2} × Near (IV-V) Map Tile,
-  \item \textbf{1} × Center (VI-VI) Map Tiles containing Settlements and Grails (Only for 4 players).
+  \item P × Starting (I) Map Tile
+  \item 3P × Far (II-III) Map Tiles - one per player must include a Settlement, and one per player must include a Trading Post
+  \item 2P × Near (IV-V) Map Tile
 \end{itemize}
-\textbf{AND}
 
+\textbf{Additionally, for 2--3 players:}
 \begin{itemize}
-  \item \textbf{1} × Starting (I) Map Tile - with \textit{Dragon Utopia} for 2-3 players \textbf{OR}
-  \item \textbf{2} × Starting (I) Map Tile - with \textit{Dragon Utopia} for 4 players.
+  \item 1 × Center (VI-VII) Map Tile with a Dragon Utopia
+\end{itemize}
+
+\textbf{For 4 players:}
+\begin{itemize}
+  \item 2 × Center (VI-VII) Map Tiles with a Dragon Utopia
+  \item P × Center (VI-VII) Map Tiles containing Settlements and Grails
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
