--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -52,22 +52,25 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-\textit{The game ends at the end of the Round where the first victory condition is met:}
+The game ends at the end of the Round when any of these conditions are met:
+
 \begin{itemize}
-  \item One player has defeated all other players’ main Heroes once - \textit{That player wins the game.}
-  \item One player conquers both of the Dragon Utopias - \textit{That player wins the game.}
-  \item One player controls 5 mines or settlements on Near and Center Tiles - \textit{That player gets 4VP.}
-  \item At the end of Round 13, \textit{or at the end of Round 8 for the short game.}
+ \item One player has defeated all other players' Main Heroes once - \textit{That player wins the game immediately.}
+ \item One player conquers both Dragon Utopias - \textit{That player wins the game immediately.}
+ \item At the end of Round 13 (or Round 8 for the shorter game).
 \end{itemize}
 
-\subsection*{\MakeUppercase{The player with the most Victory Points wins the game:}}
+\subsection*{\MakeUppercase{Victory Points}}
+If no player has achieved an immediate victory, the player with the most Victory Points (VP) wins:
+
 \begin{itemize}
-  \item 5 VP for conquering a Dragon Utopia
-  \item 4 VP for defeating the Enemy’s Main Hero - \textit{once per defeated Faction.}
-  \item 2 VP for defeating the Enemy’s Secondary Hero - \textit{once per defeated Faction.}
-  \item 2 VP for each enemy Main Town captured - \textit{once per captured Faction.}
-  \item 1 VP for every controlled Mine or Settlement.
-  \item 1 VP for every Level of Experience of the Main Hero.
+ \item 5 VP for conquering a Dragon Utopia
+ \item 4 VP for controlling 5 Mines or Settlements on Near and Center Tiles - \textit{once per game}
+ \item 4 VP for defeating an enemy's Main Hero - \textit{once per defeated Faction}
+ \item 2 VP for defeating an enemy's Secondary Hero - \textit{once per defeated Faction}
+ \item 2 VP for each enemy Main Town captured - \textit{once per captured Faction}
+ \item 1 VP for every controlled Mine or Settlement
+ \item 1 VP for every Level of Experience of your Main Hero
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
