--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -84,7 +84,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item Remove ``Earthquake'', ``Remove Obstacles'', ``View Earth'', and ``Visions'' from the Spell Deck.
-  \item Remove “Unexpected Reinforcements” from the Astrologers Proclaim Deck.
+  \item Remove ``Unexpected Reinforcements'' from the Astrologers Proclaim Deck.
   \item Make one Deck of minor, one of major and one of relic artifacts.
   \item Make one Deck of basic spells and one of expert spells.
   \item On Starting and Far Tiles players can only get basic spells and minor artifacts.
