--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -85,8 +85,8 @@ If no player has achieved an immediate victory, the player with the most Victory
 \begin{itemize}
   \item Remove ``Earthquake'', ``Remove Obstacles'', ``View Earth'', and ``Visions'' from the Spell Deck.
   \item Remove ``Unexpected Reinforcements'' from the Astrologers Proclaim Deck.
-  \item Make one Deck of minor, one of major and one of relic artifacts.
-  \item Make one Deck of basic spells and one of expert spells.
+  \item Create separate decks for Minor, Major, and Relic Artifacts.
+  \item Create separate decks for Basic and Expert Spells.
   \item On Starting and Far Tiles players can only get basic spells and minor artifacts.
   \item Players may not use Diplomacy to skip lvl VII Combat.
   \item If your Hero is lvl VII, treat lvl VI neutrals as lvl VII and gain 10 \svg{gold}
