--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -87,7 +87,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Remove ``Unexpected Reinforcements'' from the Astrologers Proclaim Deck.
   \item Create separate decks for Minor, Major, and Relic Artifacts.
   \item Create separate decks for Basic and Expert Spells.
-  \item On Starting and Far Tiles players can only get basic spells and minor artifacts.
+  \item On Starting and Far Map Tiles, players can only acquire basic Spells and Minor Artifacts.
   \item Players may not use Diplomacy to skip lvl VII Combat.
   \item If your Hero is lvl VII, treat lvl VI neutrals as lvl VII and gain 10 \svg{gold}
   \item Sanctuary effect: +1 Morale and draw 1 Card. Visitable once per Faction.
