--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -89,7 +89,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Create separate decks for Basic and Expert Spells.
   \item On Starting and Far Map Tiles, players can only acquire basic Spells and Minor Artifacts.
   \item Players may not use Diplomacy to skip Level VII Combat.
-  \item If your Hero is lvl VII, treat lvl VI neutrals as lvl VII and gain 10 \svg{gold}
+  \item If your Hero is Level VII, treat Level VI neutrals as Level VII, and gain 10 \svg{gold} for winning Combat.
   \item Sanctuary effect: +1 Morale and draw 1 Card. Visitable once per Faction.
   \item Obelisk effect: Roll one Resource die and draw one Card. \textit{May be visited once per Faction.}
   \item When fighting a neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck
