--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -111,7 +111,7 @@ When a Dragon Utopia is conquered, roll an attack die:
   \item Trading Posts - Trade resources and remove Cards, OR buy war machines.
   \item Unlimited combat Rounds against neutrals + harder Level. +gain combat lvl × \svg{gold}.
   \item \href{https://boardgamegeek.com/thread/3445901/custom-hex-combat-board}{Medium Hex combat board}.
-  \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Medium Hex combat board} - Start with several Few \svg{bronze} Units.
+  \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Stacking more than Pack} - Start with several Few \svgunit{bronze} Units.
 \end{itemize}
 
 \vspace*{\fill}
