--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -109,7 +109,12 @@ When a Dragon Utopia is conquered, roll an attack die:
 \subsection*{\MakeUppercase{Suggested houserules}}
 \begin{itemize}
   \item Trading Posts - Trade resources and remove Cards, OR buy war machines.
-  \item Unlimited combat Rounds against neutrals + harder Level. +gain combat lvl × \svg{gold}.
+  \item Fighting Neutral Units entails the following:
+  \begin{itemize}
+    \item No Combat Round limit
+    \item On Hard+ difficulty, increase the difficulty of I-IV encounters by one
+    \item Gain Field Level × \svg{gold} as an additional reward
+  \end{itemize}
   \item \href{https://boardgamegeek.com/thread/3445901/custom-hex-combat-board}{Medium Hex combat board}.
   \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Stacking more than Pack} - Start with several Few \svgunit{bronze} Units.
 \end{itemize}
