--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -108,7 +108,7 @@ When a Dragon Utopia is conquered, roll an attack die:
 
 \subsection*{\MakeUppercase{Suggested houserules}}
 \begin{itemize}
-  \item Trading Posts - Trade resources and remove Cards, OR buy war machines.
+  \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machines.
   \item Fighting Neutral Units entails the following:
   \begin{itemize}
     \item No Combat Round limit
