--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -106,7 +106,7 @@ When a Dragon Utopia is conquered, roll an attack die:
   \item +1: Scattered Treasure: All players may immediately lose 1 MP to Search (2) the artifact Deck.
 \end{itemize}
 
-\subsection*{\MakeUppercase{Suggested houserules}}
+\subsection*{\MakeUppercase{Suggested Houserules}}
 \begin{itemize}
   \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machines.
   \item Fighting Neutral Units entails the following:
