--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -99,11 +99,11 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item When a player conquers Dragon Utopia, he may recruit one of the neutral Dragons killed for half the \svg{gold} (rounded down) + \svg{valuables} OR gain 15 \svg{gold} AND Search (3) any artifact Deck. \textit{Can be conquered only once.}
 \end{itemize}
 
-When a Dragon Utopia is conquered, roll an attack die:
+After visiting a Dragon Utopia, roll an Attack Die:
 \begin{itemize}
-  \item -1: The defeated Dragons’ spirits curse the land! All players lose 1 MP for the next Round.
-  \item  0: Dragons revenge: All players must sacrifice one Unit before the end of Round, that Unit's health is reduced to 0. 
-  \item +1: Scattered Treasure: All players may immediately lose 1 MP to Search (2) the artifact Deck.
+  \item[\textbf{-1}] -- Dragons' Curse: The defeated Dragons’ spirits curse the land! All players lose 1 \svgeven{movement} for the next Round.
+  \item[\textbf{0}] -- Dragons' Revenge: All players must sacrifice one Unit before the end of the Round; that Unit's health is reduced to 0. 
+  \item[ \textbf{+1}] -- Scattered Treasure: All players may immediately lose 1 \svgeven{movement} to Search (2) the Artifact Deck.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Suggested Houserules}}
