--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -96,7 +96,11 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Level VII settlements are treated as two settlements for rewards AND roll one Resource or Treasure (reroll any XP) die.
   \item If a player defeats neutral Units on a Grail hex, he immediately gets: 10 \svg{gold}, 4 \svg{building_materials} and 2 \svg{valuables}. (alternative: Throw 2 treasure (reroll any XP ) and 2 Resource dice)  \textit{Can be conquered only once.}
   \item Dragon Utopia: Reshuffle the \svg{gold} and \svg{azure} Decks, then draw \svg{azure} until you get 3 Dragons and choose 2 AND draw from \svg{gold} until you get one Dragon. 
-  \item When a player conquers Dragon Utopia, he may recruit one of the neutral Dragons killed for half the \svg{gold} (rounded down) + \svg{valuables} OR gain 15 \svg{gold} AND Search (3) any artifact Deck. \textit{Can be conquered only once.}
+  \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
+  \begin{itemize}
+    \item Recruit one of the defeated Dragons for half its \svg{gold} (rounded down) and its \svg{valuables} cost
+    \item Receive 15 \svg{gold} AND Search (3) any Artifact Deck.
+  \end{itemize}
 \end{itemize}
 
 After visiting a Dragon Utopia, roll an Attack Die:
