--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -95,7 +95,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item When fighting a neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck
   \item Level VII settlements are treated as two settlements for rewards AND roll one Resource or Treasure (reroll any XP) die.
   \item If a player defeats neutral Units on a Grail hex, he immediately gets: 10 \svg{gold}, 4 \svg{building_materials} and 2 \svg{valuables}. (alternative: Throw 2 treasure (reroll any XP ) and 2 Resource dice)  \textit{Can be conquered only once.}
-  \item Dragon Utopia: Reshuffle the \svg{gold} and \svg{azure} Decks, then draw \svg{azure} until you get 3 Dragons and choose 2 AND draw from \svg{gold} until you get one Dragon. 
+  \item When visiting a Dragon Utopia: Reshuffle the \svgunit{gold} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2, AND draw from \svgunit{gold} until you get one Dragon.
   \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
     \item Recruit one of the defeated Dragons for half its \svg{gold} (rounded down) and its \svg{valuables} cost
