--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -92,7 +92,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, and gain 10 \svg{gold} for winning Combat.
   \item Sanctuary effect: +1 Morale and draw 1 Card. Visitable once per Faction.
   \item Obelisk effect: Roll one Resource die and draw one Card. \textit{May be visited once per Faction.}
-  \item When fighting a neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck
+  \item When fighting a Neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck.
   \item Settlements on Center (VI-VII) Map Tiles are treated as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any XP).
   \item Upon flagging a Grail Field, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
