--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -90,7 +90,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item On Starting and Far Map Tiles, players can only acquire basic Spells and Minor Artifacts.
   \item Players may not use Diplomacy to skip Level VII Combat.
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, and gain 10 \svg{gold} for winning Combat.
-  \item Sanctuary effect: +1 Morale and draw 1 Card. Visitable once per Faction.
+  \item Sanctuary effect: \textbf{once per Faction} +1 \svg{morale_positive} and draw 1 Card.
   \item Obelisk effect: textbf{once per Faction} roll one \svg{resource} and draw one Card.
   \item When fighting a Neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck.
   \item Settlements on Center (VI-VII) Map Tiles are treated as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any XP).
